fixed document overflow issue

--- a/styleguide/component-select.scss
+++ b/styleguide/component-select.scss
@@ -34,6 +34,7 @@ $selector-fade-easing: linear;
 
 // selector outlines
 .component-selector {
+  background: inherit;
   height: 100%;
   left: 0;
   opacity: 0;
